--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,8 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build APK
-        run: ./gradlew assembleRelease
-
+        run: ./gradlew :app:assembleRelease
+  
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
